[package]
name = "esparser"
version = "0.1.0"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

[lib]
# path = "src/lib_test.rs"
doctest = false

# TODO: REMOVE
# [dependencies.chomp]
# git = "https://github.com/dashed/chomp"
# branch = "bind_err"

[dependencies]
chomp = "0.3.1"
# quick-error = "1.1.0"
error-chain = "0.7.1"
enum-set = "0.0.6"
